# leptos_playground

./: .env  .gitignore  Cargo.toml  Items.sqlite  README.md  index.html
src/: app.rs  db.rs  file.rs  items.rs  lib.rs  main.rs  pagination.rs  pagination_state.rs
src/migrations/: 20230123_create_items_table.sql
src/pagination/: pagination_components.rs  pagination_state.rs
